<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/menu_home_title"
        app:showAsAction="ifRoom">
        </item>

    <item
        android:id="@+id/menu_myfamily"
        android:icon="@drawable/ic_myfamily_icon"
        android:title="@string/menu_myfamily_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/menu_search_title" />
    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notification_icon"
        android:title="@string/menu_notification_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/menu_profile_title"
        app:showAsAction="ifRoom"/>

</menu>